ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/parservoidInQualifiedName1/input.ts.stderr
error[1005]: Expected a semicolon
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/parservoidInQualifiedName1/input.ts:1:13
  |
1 | var v : void.x;
  |             ^

